docs: update README

--- a/playground/astro/Template.astro
+++ b/playground/astro/Template.astro
@@ -65,7 +65,7 @@ const bgLeftMask = `linear-gradient(to top left , ${backgroundColor} 20% , trans
         <div set:html={title} class="text-4rem text-white font-bold text-center" style={{ whiteSpace: 'pre-wrap' }}>
         </div>
         <div class="mt-6 text-2rem text-neutral-300" style={{ whiteSpace: 'pre-wrap' }}>
-            This is description.
+            This is a description
         </div>
     </div>
 
